--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,4 @@
 DATABASE_URL="mysql://USER:PASSWORD@HOST:PORT/DATABASE"
 
 # JSON Web Token (JWT) secret key for authentication
-JWT_SECRET=""
+SESSION_SECRET=""
