--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@prisma/client": "^6.3.1",
     "clsx": "^2.1.1",
+    "jose": "^5.9.6",
     "next": "15.1.6",
     "prisma": "^6.3.1",
     "react": "^19.0.0",
