--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.1",
+    "usehooks-ts": "^3.1.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
