test: Add snapshot test for AsideItem component

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "prepare": "husky",
     "test": "jest --config jest.config.ts",
     "test:watch": "jest --watch --config jest.config.ts",
-    "coverage": "jest --config jest.config.ts --coverage"
+    "coverage": "jest --config jest.config.ts --coverage",
+    "test:update": "jest --updateSnapshot --config jest.config.ts"
   },
   "husky": {
     "hooks": {
