--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     ],
     "*.(ts|tsx)": [
       "npm run format",
-      "npm run lint"
+      "npm run lint",
+      "npm run test"
     ]
   },
   "dependencies": {
