--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test": "jest --config jest.config.ts --passWithNoTests",
     "test:watch": "jest --watch --config jest.config.ts",
     "coverage": "jest --config jest.config.ts --coverage",
-    "test:update": "jest --updateSnapshot --config jest.config.ts"
+    "test:update": "jest --updateSnapshot --config jest.config.ts",
+    "check": "npm run format && npm run lint && npm run test"
   },
   "husky": {
     "hooks": {
