feat: add docker config

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,24 @@
+#
 # Database connection URL
 # Example:
 # DATABASE_URL="postgres://USER:PASSWORD@HOST:PORT/DATABASE"
+#
 DATABASE_URL=""
 DIRECT_URL=""
 
+#
 # JSON Web Token (JWT) secret key for authentication
 # Generate: openssl rand -base64 32
+#
 SESSION_SECRET=""
 
+#
 # GitHub OAuth
+#
 NEXT_PUBLIC_GITHUB_CLIENT_ID=""
 GITHUB_CLIENT_SECRET=""
+
+#
+POSTGRES_USER=""
+POSTGRES_PASSWORD=""
+POSTGRES_DB=""
