feat: update database, change on mysql

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,14 @@
+#
+# Disable telemetry
+#
 NEXT_TELEMETRY_DISABLED=1
 
 #
 # Database connection URL
 # Example:
-# DATABASE_URL="postgres://USER:PASSWORD@HOST:PORT/DATABASE"
+# DATABASE_URL="mysql://USER:PASSWORD@HOST:PORT/DATABASE"
 #
 DATABASE_URL=""
-DIRECT_URL=""
 
 #
 # JSON Web Token (JWT) secret key for authentication
@@ -21,9 +23,14 @@ NEXT_PUBLIC_GITHUB_CLIENT_ID=""
 GITHUB_CLIENT_SECRET=""
 
 #
-POSTGRES_USER=""
-POSTGRES_PASSWORD=""
-POSTGRES_DB=""
+# Yandex OAuth
+#
+NEXT_PUBLIC_YANDEX_CLIENT_ID=""
+YANDEX_CLIENT_SECRET=""
 
+#
+# Yandex Metrika
+# NEXT_PUBLIC_USE_YANDEX_METRIKA="false" or NEXT_PUBLIC_USE_YANDEX_METRIKA="true"
+#
 NEXT_PUBLIC_USE_YANDEX_METRIKA="false"
 NEXT_PUBLIC_YANDEX_METRIKA_ID=""
