refactor: update docker config

--- a/.env.example
+++ b/.env.example
@@ -34,3 +34,11 @@ YANDEX_CLIENT_SECRET=""
 #
 NEXT_PUBLIC_USE_YANDEX_METRIKA="false"
 NEXT_PUBLIC_YANDEX_METRIKA_ID=""
+
+#
+# Database credentials (for Docker Compose)
+#
+MYSQL_ROOT_PASSWORD=""
+MYSQL_USER=""
+MYSQL_PASSWORD=""
+MYSQL_DATABASE=""
