--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,51 @@
 services:
   db:
-    image: postgres:latest
-    container_name: postgres_container
+    image: mysql:8.0
+    container_name: mysql_container
     restart: always
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
-    ports:
-      - '5432:5432'
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - mysqldata:/var/lib/mysql
+      - ./mysql/logs:/var/log/mysql
     env_file:
       - .env
+    networks:
+      - app-network
+    healthcheck:
+      test: ['CMD', 'mysqladmin', 'ping', '-h', 'localhost']
+      interval: 10s
+      retries: 5
+      start_period: 30s
 
   app:
     build: .
     container_name: simple_goals_app
     restart: always
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     environment:
-      DATABASE_URL: postgresql://myuser:mypassword@db:5432/mydatabase
-      DIRECT_URL: postgresql://myuser:mypassword@db:5432/mydatabase
       NODE_ENV: production
     ports:
       - '3000:3000'
       - '5555:5555'
     env_file:
       - .env
+    networks:
+      - app-network
+    healthcheck:
+      test: ['CMD', 'curl', '-f', 'http://localhost:3000/api/health']
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
 volumes:
-  pgdata:
+  mysqldata:
+
+networks:
+  app-network:
+    driver: bridge
