refactor: cookie options

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,13 @@
 NEXT_TELEMETRY_DISABLED=1
 
 #
+# Use HTTPS
+# Example:
+# USE_HTTPS="true"
+#
+USE_HTTPS="false"
+
+#
 # Database connection URL
 # Example:
 # DATABASE_URL="mysql://USER:PASSWORD@HOST:PORT/DATABASE"
