--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "clsx": "^2.1.1",
     "jose": "^5.9.6",
     "next": "15.1.6",
+    "next-auth": "^4.24.11",
     "next-intl": "^3.26.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
