docs: change .env

--- a/.env.example
+++ b/.env.example
@@ -21,7 +21,7 @@ DATABASE_URL=""
 # JSON Web Token (JWT) secret key for authentication
 # Generate: openssl rand -base64 32
 #
-SESSION_SECRET=""
+NEXTAUTH_SECRET=""
 
 #
 # GitHub OAuth
