--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "format": "prettier -c .",
     "format:fix": "prettier -w .",
     "prepare": "husky",
-    "test": "jest --config jest.config.ts --passWithNoTests",
-    "test:watch": "jest --watch --config jest.config.ts",
-    "coverage": "jest --config jest.config.ts --coverage",
-    "test:update": "jest --updateSnapshot --config jest.config.ts",
-    "check": "npm run format && npm run lint && npm run test"
+    "test": "vitest -u",
+    "test:run": "vitest run",
+    "test:update": "vitest run -u",
+    "coverage": "vitest run --coverage",
+    "check": "npm run format && npm run lint && npm run test:run"
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seeders/seed.ts"
@@ -32,7 +32,7 @@
     "*.(ts|tsx)": [
       "npm run format",
       "npm run lint",
-      "npm run test"
+      "npm run test:run"
     ]
   },
   "dependencies": {
@@ -51,25 +51,27 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@types/bcryptjs": "^2.4.6",
-    "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/coverage-v8": "^3.0.7",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "eslint-config-prettier": "^10.0.1",
     "husky": "^9.1.7",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^26.0.0",
     "lint-staged": "^15.4.3",
     "prettier": "^3.4.2",
     "prisma": "^6.4.1",
     "rimraf": "^6.0.1",
-    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.0.7"
   }
 }
