--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.1",
     "react-modal": "^3.16.3",
+    "react-textarea-autosize": "^8.5.7",
     "usehooks-ts": "^3.1.1",
     "zod": "^3.24.1"
   },
