--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "format": "prettier -c .",
     "format:fix": "prettier -w ."
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seeders/seed.ts"
+  },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.7.0",
@@ -46,6 +49,7 @@
     "prettier": "^3.5.3",
     "prisma": "^6.7.0",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
     "tw-animate-css": "^1.2.9",
     "typescript": "^5"
   },
