--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lucide-react": "^0.507.0",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
+    "next-intl": "^4.1.0",
     "next-themes": "^0.4.6",
     "react": "^16.8 || ^17.0 || ^18.0 || ^19.0",
     "react-dom": "^16.8 || ^17.0 || ^18.0 || ^19.0",
