--- a/package.json
+++ b/package.json
@@ -9,10 +9,25 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier -c .",
-    "format:fix": "prettier -w ."
+    "format:fix": "prettier -w .",
+    "prepare": "husky"
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} -r tsconfig-paths/register prisma/seeders/seed.ts"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.(json|html|css|md)": [
+      "npm run format"
+    ],
+    "*.(ts|tsx)": [
+      "npm run format",
+      "npm run lint"
+    ]
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
@@ -48,6 +63,8 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.0.0",
     "prettier": "^3.5.3",
     "prisma": "^6.7.0",
     "tailwindcss": "^4",
