--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     container_name: simple-goals-app
     restart: unless-stopped
     ports:
-      - '9096:3000'
+      - '${APP_PORT:-9096}:3000'
     env_file:
       - .env
     networks:
@@ -24,8 +24,6 @@ services:
       - ${POSTGRES_VOLUME_PATH:-./postgres-data}:/var/lib/postgresql/data
     networks:
       - app-net
-    ports:
-      - '5432:5432'
 
 networks:
   app-net:
