--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,34 @@
 services:
-  app:
+  simple-goals:
     build: .
     container_name: simple-goals-app
     restart: unless-stopped
     ports:
-      - '${APP_PORT:-9096}:3000'
-    env_file:
-      - .env
-    networks:
-      - app-net
+      - 9096:3000
+    environment:
+      - NEXTAUTH_URL=http://localhost:9096
+      - NEXT_TELEMETRY_DISABLED=1
+      - NEXTAUTH_SECRET=your_secret_key
+      - DATABASE_URL=postgresql://appuser:apppassword@postgres:5432/appdb?schema=public
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
 
   postgres:
     image: postgres:16
     container_name: simple-goals-postgres
     restart: unless-stopped
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: appuser
+      POSTGRES_PASSWORD: apppassword
+      POSTGRES_DB: appdb
     volumes:
-      - ${POSTGRES_VOLUME_PATH:-./postgres-data}:/var/lib/postgresql/data
-    networks:
-      - app-net
+      - simple-goals-postgres:/var/lib/postgresql/data
+    healthcheck:
+      test: ['CMD-SHELL', 'pg_isready -U appuser -d appdb']
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
-networks:
-  app-net:
+volumes:
+  simple-goals-postgres:
