chore(package): move Prisma generation to postinstall
- Removed generation from prebuild
- Added a postinstall script to generate a Prisma client

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.3.0",
   "private": true,
   "scripts": {
-    "prebuild": "npx prisma generate && next telemetry disable",
+    "postinstall": "prisma generate",
+    "prebuild": "next telemetry disable",
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
