--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "simple-goals",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "private": true,
   "scripts": {
+    "postinstall": "prisma generate",
     "prebuild": "next telemetry disable",
     "dev": "next dev --turbopack",
     "build": "next build",
