--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
+    "dotenv": "^17.2.2",
     "lucide-react": "^0.544.0",
     "next": "^15.5.3",
     "next-auth": "^4.24.11",
@@ -69,8 +70,7 @@
     "prettier": "^3.5.3",
     "prisma": "^6.16.1",
     "tailwindcss": "^4.1.13",
-    "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0",
+    "tsx": "^4.20.5",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5.9.2"
   }
