feat: Configure Docker and Docker Compose with multi-stage build and migrations service
This commit refactors the Docker setup to improve the build process and make the application more robust. Key changes include:
- Implementing a multi-stage Dockerfile to separate build and production environments.
- Centralizing database configuration by using environment variables in `docker-compose.yml`.
- Creating a dedicated `migrate` service to run database migrations and seeding before the application starts.
- Updating the `.env.example` file to include all necessary environment variables.

--- a/.env.example
+++ b/.env.example
@@ -4,12 +4,37 @@
 NEXT_TELEMETRY_DISABLED=1
 
 #
+#
+#
+APP_URL=http://localhost:9096
+
+#
 # JSON Web Token (JWT) secret key for authentication
 # Generate: openssl rand -base64 32
 #
-NEXTAUTH_SECRET=""
+NEXTAUTH_SECRET=
 
 #
 # PostgreSQL
 #
-DATABASE_URL="postgresql://appuser:apppassword@postgres:5432/appdb?schema=public"
+DATABASE_URL=postgresql://appuser:apppassword@postgres:5432/appdb?schema=public
+
+#
+# PostgreSQL DB username
+#
+POSTGRES_USER=appuser
+
+#
+# PostgreSQL DB password
+#
+POSTGRES_PASSWORD=apppassword
+
+#
+# PostgreSQL DB port
+#
+POSTGRES_PORT=5432
+
+#
+# PostgreSQL DB name
+#
+POSTGRES_DB=appdb
