chore: Migrate dependency management from npm to pnpm
This commit refactors the project to use pnpm instead of npm. The changes include:
- Updating `Dockerfile` and `docker-compose.yml` to use pnpm commands.
- Replacing `package-lock.json` with `pnpm-lock.yaml`.
- Modifying `package.json` scripts to reflect the new package manager.

This transition improves build performance and efficiency.

--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
   },
   "lint-staged": {
     "*.(json|html|css|md)": [
-      "npm run format"
+      "prettier -c ./src"
     ],
     "*.(ts|tsx)": [
-      "npm run format",
-      "npm run lint"
+      "prettier -c ./src",
+      "eslint ./src"
     ]
   },
   "dependencies": {
