--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
     container_name: simple-goals-migrate
     environment:
       - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:${POSTGRES_PORT}/${POSTGRES_DB}?schema=public
-    command: npx prisma migrate deploy && npx prisma db seed
+    command: sh -c "pnpx prisma migrate deploy && ./node_modules/.bin/tsx prisma/seeders/seed.ts"
     build:
       context: .
       dockerfile: Dockerfile
