--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint ./src",
+    "lint:fix": "eslint --fix ./src",
     "format": "prettier --check .",
     "format:fix": "prettier --write .",
     "prepare": "husky"
