refactor: CI/CD, Docker, and pnpm migration (#40)
* feat: Configure Docker and Docker Compose with multi-stage build and migrations service

This commit refactors the Docker setup to improve the build process and make the application more robust. Key changes include:
- Implementing a multi-stage Dockerfile to separate build and production environments.
- Centralizing database configuration by using environment variables in `docker-compose.yml`.
- Creating a dedicated `migrate` service to run database migrations and seeding before the application starts.
- Updating the `.env.example` file to include all necessary environment variables.

* ci: Remove redundant 'npm ci' command from Dockerfile

The 'npm ci' command is no longer necessary in the Docker build process following the migration to pnpm. This change streamlines the Dockerfile for improved build efficiency.

* chore: Migrate dependency management from npm to pnpm

This commit refactors the project to use pnpm instead of npm. The changes include:
- Updating `Dockerfile` and `docker-compose.yml` to use pnpm commands.
- Replacing `package-lock.json` with `pnpm-lock.yaml`.
- Modifying `package.json` scripts to reflect the new package manager.

This transition improves build performance and efficiency.

* refactor: Rework CI workflow and linting configuration

This change replaces the old `CI` pipeline (`main.yml`) with a new, consolidated `lint.yml` file. It also updates `lint-staged` to a more robust configuration and modifies the linting and formatting scripts in `package.json` for project-wide checks.

* feat: Add a 'lint:fix' command to package.json

* 0.5.0

* docs: Updated the README file to accurately document the new development and deployment workflow.

- The Docker setup section now matches the new multi-stage build and migrations service.
- The list of environment variables has been updated to include new variables for the PostgreSQL configuration.
- The Development Setup section now uses pnpm commands 

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,49 @@
 services:
   simple-goals:
-    image: smcnikita/simple-goals
     container_name: simple-goals-app
     restart: unless-stopped
-    platform: linux/amd64
     ports:
       - 9096:3000
     environment:
-      - NEXTAUTH_URL=http://localhost:9096
-      - NEXTAUTH_SECRET=your_secret_key
-      - DATABASE_URL=postgresql://appuser:apppassword@postgres:5432/appdb?schema=public
+      - NEXTAUTH_URL=${APP_URL}
+      - NEXTAUTH_SECRET=${NEXTAUTH_SECRET}
+      - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:${POSTGRES_PORT}/${POSTGRES_DB}?schema=public
+    build:
+      context: .
+      dockerfile: Dockerfile
+      target: production
     depends_on:
-      postgres:
-        condition: service_healthy
+      migrate:
+        condition: service_completed_successfully
 
-  postgres:
+  db:
     image: postgres:16
     container_name: simple-goals-postgres
     restart: unless-stopped
-    platform: linux/amd64
     environment:
-      POSTGRES_USER: appuser
-      POSTGRES_PASSWORD: apppassword
-      POSTGRES_DB: appdb
+      - POSTGRES_USER
+      - POSTGRES_PASSWORD
+      - POSTGRES_DB
     volumes:
-      - simple-goals-postgres:/var/lib/postgresql/data
+      - simple-goals-db:/var/lib/postgresql/data
     healthcheck:
       test: ['CMD-SHELL', 'pg_isready -U appuser -d appdb']
       interval: 10s
       timeout: 5s
       retries: 5
 
+  migrate:
+    container_name: simple-goals-migrate
+    environment:
+      - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:${POSTGRES_PORT}/${POSTGRES_DB}?schema=public
+    command: sh -c "pnpx prisma migrate deploy && ./node_modules/.bin/tsx prisma/seeders/seed.ts"
+    build:
+      context: .
+      dockerfile: Dockerfile
+      target: builder
+    depends_on:
+      db:
+        condition: service_healthy
+
 volumes:
-  simple-goals-postgres:
+  simple-goals-db:
