--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.7",
-    "zustand": "^5.0.8"
+    "zustand": "^5.0.8",
+    "prisma": "^6.16.1",
+    "tsx": "^4.20.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -64,9 +66,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.1.6",
     "prettier": "^3.5.3",
-    "prisma": "^6.16.1",
     "tailwindcss": "^4.1.13",
-    "tsx": "^4.20.5",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5.9.2"
   }
