--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  app:
+  simple-goals:
     container_name: simple-goals-app
     restart: unless-stopped
     ports:
@@ -13,8 +13,8 @@ services:
       dockerfile: Dockerfile
       target: production
     depends_on:
-      db:
-        condition: service_healthy
+      migrate:
+        condition: service_completed_successfully
 
   db:
     image: postgres:16
@@ -25,12 +25,25 @@ services:
       - POSTGRES_PASSWORD
       - POSTGRES_DB
     volumes:
-      - db-data:/var/lib/postgresql/data
+      - simple-goals-db:/var/lib/postgresql/data
     healthcheck:
       test: ['CMD-SHELL', 'pg_isready -U appuser -d appdb']
       interval: 10s
       timeout: 5s
       retries: 5
 
+  migrate:
+    container_name: simple-goals-migrate
+    environment:
+      - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:${POSTGRES_PORT}/${POSTGRES_DB}?schema=public
+    command: sh -c "pnpx prisma migrate deploy && ./node_modules/.bin/tsx prisma/seeders/seed.ts"
+    build:
+      context: .
+      dockerfile: Dockerfile
+      target: builder
+    depends_on:
+      db:
+        condition: service_healthy
+
 volumes:
-  db-data:
+  simple-goals-db:
