--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simple-goals",
-  "version": "0.5.1",
+  "version": "0.5.0",
   "private": true,
   "scripts": {
     "postinstall": "prisma generate",
@@ -50,9 +50,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.7",
-    "zustand": "^5.0.8",
-    "prisma": "^6.16.1",
-    "tsx": "^4.20.5"
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -66,7 +64,9 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.1.6",
     "prettier": "^3.5.3",
+    "prisma": "^6.16.1",
     "tailwindcss": "^4.1.13",
+    "tsx": "^4.20.5",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5.9.2"
   }
